# mcp-mempool

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_dual_server.py  run_server.py  run_server_standard.py
docs/: client_connection_guide.md  prd.md
src/mempool_ws_mcp_server/: __init__.py  config.py  http_api.py  main.py  rest_client.py  standard_mcp_server.py  tools.py  types.py  websocket_manager.py
tests/: __init__.py  test_main.py  test_websocket_manager.py
